log-schemas/27.5/opcua_binary_aggregate_filter.rst
``opcua_binary_aggregate_filter`` field reference
-------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``monitored_parameters_link_id`` (string)
     - The monitored_parameters_link_id information.

   * - ``start_time`` (time)
     - The start_time information.

   * - ``start_time_str`` (string)
     - The start_time_str information.

   * - ``aggregate_type_encoding_mask`` (string)
     - The aggregate_type_encoding_mask information.

   * - ``aggregate_type_namespace_idx`` (integer - count)
     - The aggregate_type_namespace_idx information.

   * - ``aggregate_type_numeric`` (integer - count)
     - The aggregate_type_numeric information.

   * - ``aggregate_type_string`` (string)
     - The aggregate_type_string information.

   * - ``aggregate_type_guid`` (string)
     - The aggregate_type_guid information.

   * - ``aggregate_type_opaque`` (string)
     - The aggregate_type_opaque information.

   * - ``processing_interval`` (number - double)
     - The processing_interval information.

   * - ``use_server_capabilities_default`` (boolean - bool)
     - The use_server_capabilities_default information.

   * - ``treat_uncertain_as_bad`` (boolean - bool)
     - The treat_uncertain_as_bad information.

   * - ``percent_data_good`` (integer - count)
     - The percent_data_good information.

   * - ``percent_data_bad`` (integer - count)
     - The percent_data_bad information.

   * - ``use_slopped_extrapolation`` (boolean - bool)
     - The use_slopped_extrapolation information.

   * - ``revised_start_time`` (time)
     - The revised_start_time information.

   * - ``revised_start_time_str`` (string)
     - The revised_start_time_str information.

   * - ``revised_processing_interval`` (number - double)
     - The revised_processing_interval information.

   * - ``revised_use_server_capabilities_default`` (boolean - bool)
     - The revised_use_server_capabilities_default information.

   * - ``revised_treat_uncertain_as_bad`` (boolean - bool)
     - The revised_treat_uncertain_as_bad information.

   * - ``revised_percent_data_good`` (integer - count)
     - The revised_percent_data_good information.

   * - ``revised_percent_data_bad`` (integer - count)
     - The revised_percent_data_bad information.

   * - ``revised_use_slopped_extrapolation`` (boolean - bool)
     - The revised_use_slopped_extrapolation information.
